apps/openclaw/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik
  namespace: nori-cloud
  labels:
    app: openclaw
spec:
  forwardAuth:
    address: "http://authentik.norriswu.me/outpost.goauthentik.io/auth/traefik"
    trustForwardHeader: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-email
      - X-authentik-uid
